--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,3 @@
-/* ./resources/css/app.css */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
